--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,6 @@
 # only Main files contain this front matter, not partials.
 ---
 
-
 @import "vendor/sanitize.scss";
 @import "variables.scss";
 @import "mixins.scss";
@@ -14,6 +13,41 @@
 @import "experience.scss";
 @import "newsletter.scss";
 @import "services.scss";
+@import "agent-card.scss";
+@import "agent-modal.scss";
+
+.modal {
+  @include modal;
+}
+
+.modal__close {
+  @include close-button;
+  position: absolute;
+  color: $primary-color;
+  cursor: pointer;
+  padding: 21px;
+}
+
+.rounded-red-button {
+  border-radius: 500px;
+  margin-top: 22px;
+  font-weight: 500;
+  font-size: 0.7em;
+  color: $primary-color-darker-darker;
+  border-color: $primary-color-darker-darker;
+  border-style: solid;
+  border-width: thin;
+  padding: 5px 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  @include mobile {
+    font-size: 1em;
+  }
+}
+
+.pt-site-header {
+  padding-top: 68px;
+}
 
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
