--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -21,31 +21,25 @@
     <!-- endbuild -->
   </head>
   <body>
+
     {% include login.html %}
-    <div class="nav-modal">
-      <div class="inner">
-        <img src="images/logo.png" class="modal-logo"/>
-        <div class="menu-close"></div>
-        <ul class="nav">
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="index.html?section=services">SERVICES</a></li>
-          <li><a href="listings.html">LISTINGS</a></li>
-          <li><a class="active" href="experience.html">EXPERIENCE</a></li>
-          <li><a href="about.html">ABOUT</a></li>
-          <li><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a></li>
-          <li><a class="contact-us-link">CONTACT</a></li>
-        </ul>
-      </div>
-    </div>
+
+    {% include nav-modal.html active-section="experience" %}
+
+    {% include site-header.html %}
+
     {% include contact-form.html %}
-    <div class="main">
-      <div id="container-experience">
-        <div class="experience-main">
-          <div class="top">
-            <img src="images/logo.png" class="logo-upper-left"/>
-            <div class="ham-menu"></div>
-            <div class="services__hero">
-              <div class="state__links">
+
+    <div
+      id="container-experience"
+      class="main"
+    >
+      <div class="hero">
+
+        <div class="hero__top">
+          <div class="services__hero">
+            <div>
+              <div>
                 <div class="link__outer">
                   <a
                     href="/experience.html"
@@ -56,7 +50,9 @@
                   </a>
                 </div>
               </div>
-              <div class="services__links state__links">
+
+              <div>
+
                 <div class="link__outer">
                   <a
                     href="/experience?service=tenant"
@@ -66,6 +62,7 @@
                     TENANT<br /> REPRESENTATION
                   </a>
                 </div>
+
                 <div class="link__outer">
                   <a
                     href="/experience?service=landlord"
@@ -75,6 +72,7 @@
                     LANDLORD<br /> REPRESENTATION
                   </a>
                 </div>
+
                 <div class="link__outer">
                   <a
                     href="/experience?service=investment"
@@ -84,46 +82,62 @@
                     INVESTMENT<br /> SALES
                   </a>
                 </div>
+
               </div>
+
               <div class="state state--default services__description">
                 {{ page.text_body }}
               </div>
+
               <div class="state state--tenant services__description">
                 {{ page.tenant_services_text }}
               </div>
+
               <div class="state state--landlord services__description">
                 {{ page.landlord_services_text }}
               </div>
+
               <div class="state state--investment services__description">
                 {{ page.investment_services_text }}
               </div>
-              <button class="contact-us-link contact-us-button">CONTACT US</button>
-            </div>
-          </div>
-          <div class="bottom">
-            <div class="state state--tenant">
-              {% include service-example.html
-                examples=site.examples_tenant
-                multi-image=true
-              %}
-            </div>
-            <div class="state state--landlord">
-              {% include service-example.html
-                examples=site.examples_landlord
-                multi-image=true
-              %}
-            </div>
-            <div class="state state--investment">
-              {% include service-example.html
-                examples=site.examples_investment
-                multi-image=true
-              %}
+
+              <button class="contact-us-link contact-us-button">
+                CONTACT US
+              </button>
+
             </div>
           </div>
         </div>
 
-        {% include footer.html %}
+        <div class="hero__bottom">
+
+          <div class="state state--tenant">
+            {% include service-example.html
+              examples=site.examples_tenant
+              multi-image=true
+            %}
+          </div>
+
+          <div class="state state--landlord">
+            {% include service-example.html
+              examples=site.examples_landlord
+              multi-image=true
+            %}
+          </div>
+
+          <div class="state state--investment">
+            {% include service-example.html
+              examples=site.examples_investment
+              multi-image=true
+            %}
+          </div>
+
+        </div>
+
       </div>
+
+      {% include footer.html %}
+
     </div>
     {% include include-scripts.html %}
     <script type="text/javascript" src="/scripts/experience.js"></script>
