--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -8,216 +8,416 @@
     {% include header-links.html %}
   </head>
   <body>
+
     {% include login.html %}
+
     <div class="print">
+
       <div class="header">
-        <img class="logo" src="/images/logo.png"/>
-        <span class="contact moreSubdued">
-          {{page.address-line-1}}<br />
-          {{page.address-line-2}}
-          <div style="margin-top: 4px;">Chris Keller: {{site.data.contact.phone}}</div>
-        </span>
+
+        <img
+          src="/images/logo.png"
+          class="logo"
+        />
+
+        <div class="contact more-subdued">
+
+          <div>
+
+            {{page.address-line-1}}
+
+            <br />
+
+            {{page.address-line-2}}
+
+          </div>
+
+          <div class="contact-phone">
+            Chris Keller: {{site.data.contact.phone}}
+          </div>
+
+        </div>
 
       </div>
-      <div class="content">
-        <div class="listing-name">{{page.name}}</div>
-          <div class="gallery">
-            {% if page.gallery-images[0] %}
-              <img src="{{ page.gallery-images[0] }}" class="listing-image"/>
-            {% endif %}
-            {% if page.gallery-images[1] %}
-              <img src="{{ page.gallery-images[1] }}" class="listing-image"/>
-            {% endif %}
-            {% if page.gallery-images[2] %}
-              <img src="{{ page.gallery-images[2] }}" class="listing-image"/>
-            {% endif %}
-          </div>
+
+      <div class="images">
+
+        <div class="listing-name">
+          {{page.name}}
         </div>
-        <div class="information">
-          <div class="text">
-            <h4>{{page.info-title}}</h4>
-            <p>{{page.info-text}}</p>
-          </div>
-          <div class="location">
-            <div class="location-header">Location</div>
-            <ul>
-              <li>
-                {{page.address-line-1}}<br />
-                {{page.address-line-2}}
-              </li>
-              <li>{{page.phone}}</li>
-              <li>{{page.hours}}</li>
-            </ul>
-          </div>
+
+        <div class="gallery">
+
+          {% if page.gallery-images[0] %}
+            <img
+              src="{{ page.gallery-images[0] }}"
+              class="listing-image"
+            />
+          {% endif %}
+
+          {% if page.gallery-images[1] %}
+            <img
+              src="{{ page.gallery-images[1] }}"
+              class="listing-image"
+            />
+          {% endif %}
+
+          {% if page.gallery-images[2] %}
+            <img
+              src="{{ page.gallery-images[2] }}"
+              class="listing-image"
+            />
+          {% endif %}
+
         </div>
-        <div class="features">
-          <div class="menu">
-            <div class="highlights">
-              <h2 class="sidebar-header"><strong>HIGHLIGHTS</strong></h2>
-              <ul class="list">
-                {% for highlight in page.highlights %}
-                  <li>{{ highlight }}</li>
-                  <hr>
-                {% endfor %}
-              </ul>
-            </div>
-            {% if page.availabilities.size > 0 %}
-              <div class="amenities">
-                <h2 class="sidebar-header"><strong>AVAILABILITIES</strong></h2>
-                <ul class="list">
-                  {% for unit in page.availabilities %}
-                  <li>{{ unit }}</li>
-                  <hr>
-                  {% endfor %}
-                </ul>
-              </div>
-            {% endif %}
-            <div class="amenities">
-              <h2 class="sidebar-header"><strong>AMENITIES</strong></h2>
-              <ul class="list">
-                {% for amenity in page.amenities %}
-                <li>{{ amenity }}</li>
-                <hr>
-                {% endfor %}
-              </ul>
-            </div>
-          </div>
-        </div>
-        {% if page.floorplans.size > 0 %}
-          {% for floorplan in page.floorplans %}
-            <div class="floorplan">
-              <img src="{{ floorplan }}" class="printout__floorplan" />
-            </div>
-          {% endfor %}
-        {% endif %}
+
       </div>
-    </div>
-    <div class="web">
-      <div class="ham-menu"></div>
-      {% include contact-form.html %}
-      <div class="nav-modal">
-        <div class="inner">
-          <img src="/images/logo.png" class="modal-logo"/>
-          <div class="menu-close"></div>
-          <ul class="nav">
-            <li><a href="/index.html">HOME</a></li>
-            <li><a href="index.html?section=services">SERVICES</a></li>
-            <li><a href="/listings.html" class="active">LISTINGS</a></li>
-            <li><a href="/experience.html">EXPERIENCE</a></li>
-            <li><a href="/about.html">ABOUT </a></li>
-            <li><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a></li>
-            <li><a class="contact-us-link">CONTACT</a></li>
+
+      <div class="information">
+
+        <div class="text">
+
+          <h4>
+            {{page.info-title}}
+          </h4>
+
+          <p>
+            {{page.info-text}}
+          </p>
+
+        </div>
+
+        <div class="location">
+
+          <div class="location-header">
+            Location
+          </div>
+
+          <ul>
+
+            <li>
+
+              {{page.address-line-1}}
+
+              <br />
+
+              {{page.address-line-2}}
+
+            </li>
+
+            <li>
+              {{page.phone}}
+            </li>
+
+            <li>
+              {{page.hours}}
+            </li>
+
           </ul>
+
         </div>
+
       </div>
+      <div class="features">
+
+        <div class="highlights">
+
+          <h2 class="sidebar-header">
+            <strong>
+              HIGHLIGHTS
+            </strong>
+          </h2>
+
+          <ul class="list">
+            {% for highlight in page.highlights %}
+
+              <li>{{ highlight }}</li>
+
+              <hr>
+
+            {% endfor %}
+          </ul>
+
+        </div>
+
+        {% if page.availabilities.size > 0 %}
+          <div class="amenities">
+
+            <h2 class="sidebar-header">
+              <strong>
+                AVAILABILITIES
+              </strong>
+            </h2>
+
+            <ul class="list">
+              {% for unit in page.availabilities %}
+
+                <li>
+                  {{ unit }}
+                </li>
+
+                <hr>
+
+              {% endfor %}
+            </ul>
+
+          </div>
+        {% endif %}
+
+        <div class="amenities">
+
+          <h2 class="sidebar-header">
+            <strong>
+              AMENITIES
+            </strong>
+          </h2>
+
+          <ul class="list">
+            {% for amenity in page.amenities %}
+
+              <li>
+                {{ amenity }}
+              </li>
+
+              <hr />
+
+            {% endfor %}
+          </ul>
+
+        </div>
+
+      </div>
+      {% if page.floorplans.size > 0 %}
+        {% for floorplan in page.floorplans %}
+          <div class="floorplan">
+            <img
+              src="{{ floorplan }}"
+              class="printout__floorplan"
+            />
+          </div>
+        {% endfor %}
+      {% endif %}
+    </div>
+
+    <div class="web">
+
+      {% include site-header.html %}
+
+      {% include contact-form.html %}
+
+      {% include nav-modal.html active-section="listings" %}
+
       <div class="main">
-        <div id="container-listing" class="container-fluid">
-          <img src="/images/home-logo.png" class="logo-upper-left"/>
+        <!-- TODO: move this container to above the print section -->
+        <div id="container-listing">
+
           {% if page.property-header %}
             <div id="header-listings" class="background-header" style="background-image:url({{page.property-header}})"></div>
           {% else %}
+
             <div id="header-listings" class="background-header"></div>
           {% endif %}
-          <div id="listings-content">
-            <div id="header-text-listings">
-              <div class="location">{{ page.location }}</div>
+
+          <div class="listings-content">
+            <div class="header-text-listings">
+              <div>
+                {{ page.location }}
+              </div>
             </div>
             <div class="container">
-              <div id="listings-sidebar">
-                <div class="listings-sidebar__inner">
-                  <div class="menu-top">
-                    <div class="buttons">
-                      <a class="cool-button contact-us-link">CHECK AVAILABILITY</a>
-                      <a id="print-brochure" href="#" class="cool-button">PRINT BROCHURE</a>
-                    </div>
-                  </div>
-                  <div class="menu">
-                    <h2 class="sidebar-header"><strong>ADDRESS</strong></h2>
-                    <hr class="light-line">
-                    <div class="listing-info">
-                      <div>{{page.address-line-1}}</div>
-                      <div>{{page.address-line-2}}</div>
-                    </div>
-                    {% if page.availabilities.size > 0 %}
-                      <h2 class="sidebar-header"><strong>AVAILABILITIES</strong></h2>
-                      <hr class ="light-line">
-                      <ul class="amenity-list">
-                        {% for unit in page.availabilities %}
-                          <li class="listing-info">{{ unit }}</li>
-                          <hr>
-                        {% endfor %}
-                      </ul>
-                    {% endif %}
-                    <h2 class="sidebar-header"><strong>HIGHLIGHTS</strong></h2>
-                    <hr class ="light-line">
-                    <ul class="amenity-list">
-                      {% for highlight in page.highlights %}
-                        <li class="listing-info">{{ highlight }}</li>
-                        <hr>
-                      {% endfor %}
-                    </ul>
-                    <h2 class="sidebar-header"><strong>AMENITIES</strong></h2>
-                    <hr class="light-line">
-                    <ul class="amenity-list">
-                      {% for amenity in page.amenities %}
-                      <li class="listing-info">{{ amenity }}</li>
-                      <hr>
-                      {% endfor %}
-                    </ul>
+
+              <div class="listings-sidebar">
+
+                <div class="menu-top">
+                  <div class="buttons">
+
+                    <a class="cool-button contact-us-link">
+                      CHECK AVAILABILITY
+                    </a>
+
+                    <a
+                      href="#"
+                      id="print-brochure"
+                      class="cool-button"
+                    >
+                      PRINT BROCHURE
+                    </a>
+
                   </div>
                 </div>
+
+                <div class="menu">
+
+                  <h2 class="menu__header">
+                    <strong>
+                      ADDRESS
+                    </strong>
+                  </h2>
+
+                  <div class="menu__section">
+
+                    {{page.address-line-1}}
+
+                    <br />
+
+                    {{page.address-line-2}}
+
+                  </div>
+
+                  {% if page.availabilities.size > 0 %}
+
+                    <h2 class="menu__header">
+                      <strong>
+                        AVAILABILITIES
+                      </strong>
+                    </h2>
+
+                    <div class="menu__section">
+                      <ul class="menu__list">
+                        {% for unit in page.availabilities %}
+
+                          <li  class="menu__item">
+                            {{ unit }}
+                          </li>
+
+                        {% endfor %}
+                      </ul>
+                    </div>
+
+                  {% endif %}
+
+                  {% if page.highlights.size > 0 %}
+
+                    <h2 class="menu__header">
+                      <strong>
+                        HIGHLIGHTS
+                      </strong>
+                    </h2>
+
+                    <div class="menu__section">
+                      <ul class="menu__list">
+                        {% for unit in page.highlights %}
+
+                          <li class="menu__item">
+                            {{ unit }}
+                          </li>
+
+                        {% endfor %}
+                      </ul>
+                    </div>
+
+                  {% endif %}
+
+                  {% if page.amenities.size > 0 %}
+
+                    <h2 class="menu__header">
+                      <strong>
+                        AMENITIES
+                      </strong>
+                    </h2>
+
+                    <div class="menu__section">
+                      <ul class="menu__list">
+                        {% for unit in page.amenities %}
+
+                          <li class="menu__item">
+                            {{ unit }}
+                          </li>
+
+                        {% endfor %}
+                      </ul>
+                    </div>
+
+                  {% endif %}
+
+                </div>
+
               </div>
-              <div id="listings-info">
+
+              <div class="listings-info">
+
                 <div class="info-box">
+
                   <div class="info-text">
+
                     <h2 class="title">
                       {{ page.info-title }}
                     </h2>
+
                     <p>
                       {{ page.info-text }}
                     </p>
+
                   </div>
+
                   <div class="listing-image-gallery">
+
                     <div class="listing-carousel">
                       {% for img-src in page.gallery-images %}
                         <div class="listing-image-slide">
-                          <div class="listing-image" style="background-image: url('{{ img-src }}')"></div>
+                          <div
+                            style="background-image: url('{{ img-src }}')"
+                            class="listing-image"
+                          ></div>
                         </div>
                       {% endfor %}
                     </div>
-                    <!-- only display the navigation arrows if there are more than one image -->
+
                     {% if page.gallery-images[1] %}
                       <div class="gallery-arrow-container">
+
                         <div class="gallery-arrow-left gallery-navigation"></div>
+
                         <div class="gallery-arrow-right gallery-navigation"></div>
+
                       </div>
                     {% endif %}
+
                   </div>
+
                 </div>
+
                 {% if (page.latitude and page.longitude) or page.floorplans.size > 0 %}
                   <div class="info-box">
                     {% if page.latitude and page.longitude %}
-                      <h2 class="title">LOCATION</h2>
+
+                      <h2 class="title">
+                        LOCATION
+                      </h2>
+
                       <div id="about-google-map"></div>
+
                     {% endif %}
 
                     {% if page.floorplans.size > 0 %}
-                      <h2 class="title">FLOORPLAN{% if page.floorplans.size > 1 %}S{% endif %}</h2>
+
+                      <h2 class="title">
+                        FLOORPLAN{% if page.floorplans.size > 1 %}S{% endif %}
+                      </h2>
+
                       {% for floorplan in page.floorplans %}
                         <div class="floorplan">
-                          <img src="{{ floorplan }}" class="img-responsive" />
+                          <img
+                            src="{{ floorplan }}"
+                            class="img-responsive"
+                           />
                         </div>
                       {% endfor %}
+
                     {% endif %}
                   </div>
                 {% endif %}
               </div>
+
             </div>
           </div>
         </div>
-         {% include footer.html %}
+      </div>
+
+        {% include footer.html %}
+
+      </div>
     </div>
-   </div>
     {% include include-scripts.html %}
     <script>
       $(document).ready(function() {
