--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -130,14 +130,10 @@ a {
   width: 100%;
   height: 100%;
   z-index: 4;
-}
-
-.contact-subcontainer {
-  width: 100%;
-  margin: 0 auto;
   padding-left: 80px;
   max-width: $page-max-width;
 }
+
 #contact-us-home-section {
   position: relative;
   color: $grey;
@@ -160,24 +156,24 @@ a {
       padding: 0.5em 18px;
     }
     .contact-body {
+      padding: 11px;
+      margin: 0;
       font-size: 16px;
       background: rgba(255, 255, 255, 0.9);
-      padding: 15px 0;
-      > ul {
-        list-style-type: none;
-        margin: 0;
-        padding-left: 11px;
-        > li {
-          padding: 6px;
-          cursor: pointer;
-          &:hover {
-            > * {
-              text-decoration: underline;
-            }
-          }
+      list-style-type: none;
+      > a {
+        display: flex;
+        align-items: center;
+        padding: 6px;
+        cursor: pointer;
+        text-decoration: none;
+        &:hover {
           > * {
-            text-decoration: none;
+            text-decoration: underline;
           }
+        }
+        > * {
+          text-decoration: none;
         }
       }
     }
@@ -304,14 +300,17 @@ a {
 }
 
 .logo-upper-left {
-  @include mobile-logo;
   cursor: pointer;
   position: absolute;
   top: 35px;
   left: 35px;
-  width: 278px;
-  height: auto;
   z-index: 2;
+  width: 278px;
+  @include mobile {
+    max-width: 46%;
+    top: 18px;
+    left: 14px;
+  }
 }
 
 .ham-menu {
@@ -456,13 +455,6 @@ a {
     width: 67%;
     overflow-y: auto;
   }
-  .contact-close {
-    @include close-button;
-    position: absolute;
-    color: $primary-color;
-    cursor: pointer;
-    padding: 21px;
-  }
   .form {
     margin: 36px;
     > p {
@@ -518,41 +510,64 @@ a {
   background: white;
   z-index: 101;
   text-align: center;
-  .inner {
-    padding: 15px;
-    position: relative;
-    .modal-logo {
-      width: 278px;
-      position: absolute;
-      top: 35px;
-      left: 35px;
+  padding: 15px;
+  &#active-section-home {
+    .link-home {
+      color: $primary-color;
     }
-    .menu-close {
-      z-index: 10;
-      @include close-button;
+  }
+  &#active-section-services {
+    .link-services {
+      color: $primary-color;
     }
+  }
+  &#active-section-about {
+    .link-about {
+      color: $primary-color;
+    }
+  }
+  &#active-section-experience {
+    .link-experience {
+      color: $primary-color;
+    }
+  }
+  &#active-section-listings {
+    .link-listings {
+      color: $primary-color;
+    }
+  }
+  .modal-logo {
+    position: absolute;
+    top: 35px;
+    left: 35px;
+    max-width: 278px;
+    @include mobile {
+      max-width: 46%;
+      top: 18px;
+      left: 14px;
+    }
+  }
+  .menu-close {
+    z-index: 10;
+    @include close-button;
+  }
 
-    ul.nav {
-      padding: 8% 0 0;
-      list-style: none;
-      font-size: 2em;
-      text-align: center;
-      margin: 0;
-      li {
-        @include expanding-hover($primary-color);
-        > a {
-          color: #888;
-          line-height: 2;
-          font-size: 1.125em;
-          text-decoration: none;
-          position: relative;
-          &.active {
-            color: $primary-color;
-          }
-        }
-        > a:hover {
-          color: #888;
-        }
+  ul.nav {
+    padding: 8% 0 0;
+    list-style: none;
+    font-size: 2em;
+    text-align: center;
+    margin: 0;
+    li {
+      @include expanding-hover($primary-color);
+      > a {
+        line-height: 2;
+        font-size: 1.125em;
+        text-decoration: none;
+        position: relative;
+      }
+      > a:hover {
+        color: #888;
       }
     }
   }
@@ -560,17 +575,15 @@ a {
 
 .home-intro-left {
   width: 50%;
+  padding: 80px;
   background-color: white;
   font-family: $font-brand;
   color: #b4b3b3;
   letter-spacing: 0.5px;
   color: #858585;
   overflow: hidden;
-  > div {
-    padding: 80px;
-    > p {
-      margin-top: 26px;
-    }
+  > p {
+    margin-top: 26px;
   }
 }
 
@@ -673,6 +686,7 @@ a {
   color: #858585;
   > span {
     color: $primary-color;
+    font-weight: 700;
   }
 }
 
@@ -854,11 +868,11 @@ a {
   border-color: $primary-color;
 }
 
-.services-info {
+.services-container {
   position: relative;
   background-color: $primary-color;
-  color: white;
-  .services-content {
+  > div {
+    color: white;
     max-width: 1800px;
     margin: 0 auto;
     height: 100%;
@@ -1069,15 +1083,6 @@ a {
   .arrow-up {
     bottom: 330px;
   }
-  .logo-upper-left {
-    @include mobile-logo;
-    position: absolute;
-    top: 18px;
-    left: 14px;
-    width: 46%;
-    height: auto;
-    z-index: 2;
-  }
 
   .review img {
     display: block;
@@ -1095,10 +1100,8 @@ a {
   }
 
   .nav-modal {
-    .inner {
-      .menu-close {
-        padding: 21px;
-      }
+    .menu-close {
+      padding: 21px;
     }
   }
 
@@ -1161,13 +1164,8 @@ a {
     display: none !important;
   }
   .nav-modal {
-    .inner {
-      .modal-logo {
-        @include mobile-logo;
-      }
-      ul.nav {
-        margin-top: 42px;
-      }
+    ul.nav {
+      margin-top: 42px;
     }
   }
 
@@ -1197,7 +1195,7 @@ a {
     .contact-us-gmap-container {
       display: none;
     }
-    .contact-subcontainer {
+    .contact-container {
       padding-left: 0;
       .contact-content {
         position: static;
@@ -1212,11 +1210,7 @@ a {
           font-size: 52px;
         }
         .contact-body {
-          padding-left: 12px;
           font-size: 0.95em;
-          > ul {
-            padding-left: 0;
-          }
         }
       }
     }
@@ -1288,9 +1282,7 @@ a {
   .home-intro-left {
     display: inline-block;
     width: 100%;
-    > div {
-      padding: 80px 20px 0 20px;
-    }
+    padding: 80px 20px 0 20px;
   }
 
   .home-intro-right {
@@ -1299,9 +1291,7 @@ a {
 
   .services-info {
     width: 100%;
-    .services-content {
-      margin-left: 0;
-    }
+    margin-left: 0;
   }
 
   .services-row {
@@ -1367,10 +1357,7 @@ a {
         text-align: center;
       }
       .contact-body {
-        padding: 0;
-        > ul {
-          padding-left: 20px;
-        }
+        padding: 0 0 0 20px;
       }
     }
   }
