- Move footer styles into their own file - Refactor footer (there were some issues with content overflowing on certain pages) - Rename footer icons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,41 +1,89 @@
 <div class="footer">
-  <div class="inner">
-    <div class="column">
-      <div class="title"><a href="/index.html?section=services">SERVICES</a></div>
-      <!-- <a href="/index.html?section=services">Services</a> -->
+
+  <div class="main">
+
+    <div class="links">
+
+      <a
+        href="/index.html#services"
+        class="title link"
+      >
+        SERVICES
+      </a>
+
+      <a
+        href="/listings.html"
+        class="title link"
+      >
+        LISTINGS
+      </a>
+
+      <a
+        href="/experience.html"
+        class="title link"
+      >
+        EXPERIENCE
+      </a>
+
+      <a
+        href="/about.html"
+        class="title link"
+      >
+        ABOUT
+      </a>
+
+      <a class="title contact-us-link link">
+        CONTACT
+      </a>
+
+      <a
+        href="https://ws.onehub.com/" target="_blank"
+        class="title link"
+      >
+        CLIENT ACCESS
+      </a>
+
     </div>
-    <div class="column">
-      <div class="title"><a href="/listings.html">LISTINGS</a></div>
-      <!-- <a href="/listings.html?type=buy">Listings For Sale</a>
-      <a href="/listings.html?type=lease">Listings For Lease</a> -->
-    </div>
-    <div class="column">
-      <div class="title"><a href="/experience.html">EXPERIENCE</a></div>
-      <!-- <a href="/experience.html?section=studies">Case Studies</a> -->
-    </div>
-    <div class="column">
-      <div class="title"><a href="/about.html">ABOUT</a></div>
-      <!-- <a href="/about.html?section=team">Meet the Team</a> -->
-    </div>
-    <div class="column">
-      <div class="title contact-us-link">CONTACT</div>
-    </div>
-    <div class="column">
-      <div class="title "><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a></div>
-    </div>
-    <div class="column copyright">
+
+    <div class="copyright copyright--desktop">
       Copyright &copy; Groundsource
     </div>
+
   </div>
-  <div class="column social">
-    <a href="https://www.instagram.com/{{site.data.contact.instagram}}" target="_blank">
-      <img src="/images/social/i.svg"/>
+
+  <div class="social">
+
+    <a
+      href="https://www.instagram.com/{{site.data.contact.instagram}}"
+      target="_blank"
+      class="social-icon"
+    >
+      <img src="/images/social/instagram.svg" />
     </a>
-    <a href="https://www.twitter.com/{{site.data.contact.twitter}}" target="_blank">
-      <img src="/images/social/t.svg"/>
+
+    <a
+      href="https://www.twitter.com/{{site.data.contact.twitter}}"
+      target="_blank"
+      class="social-icon"
+    >
+      <img
+        src="/images/social/twitter.svg" />
     </a>
-    <a href="https://www.facebook.com/{{site.data.contact.facebook}}" target="_blank">
-      <img src="/images/social/f.svg"/>
+
+    <a
+      href="https://www.facebook.com/{{site.data.contact.facebook}}"
+      target="_blank"
+      class="social-icon"
+    >
+      <img
+        src="/images/social/facebook.svg"
+      />
     </a>
+
   </div>
+
+  <div class="copyright copyright--mobile">
+    Copyright &copy; Groundsource
+  </div>
+
 </div>
