--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@
 @import "services.scss";
 @import "agent-card.scss";
 @import "agent-modal.scss";
+@import "footer.scss";
 
 .modal {
   @include modal;
