Remove vestigial authentication logic (from when the website was in beta).

--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -22,18 +22,13 @@
   </head>
   <body>
 
-    {% include login.html %}
-
     {% include nav-modal.html active-section="experience" %}
 
     {% include site-header.html %}
 
     {% include contact-form.html %}
 
-    <div
-      id="container-experience"
-      class="main"
-    >
+    <div id="container-experience">
       <div class="hero">
 
         <div class="hero__top">
