--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -20,7 +20,7 @@ $listings-text: #de6c62;
 $brand-blue: #387ac8;
 $left-align-home: 80px;
 $left-align-home-mobile: 25px;
-$pt-site-header: 85px;
+$pt-site-header: 6em;
 
 $browser-context: 16; // Default
 
