--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -1,11 +1,9 @@
 #container-experience {
-  .hero {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 
-  .hero__top {
+  .info {
     @include bg-cover-center;
     text-align: center;
     min-height: 60vh;
@@ -16,21 +14,22 @@
     height: 100%;
     display: flex;
     align-items: center;
-    > div {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      max-width: 1000px;
-      padding: 0 15px;
-      margin: 0 auto;
-      > * {
-        margin-bottom: 60px;
-      }
+  }
+
+  .info__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1000px;
+    padding: 0 15px;
+    margin: 0 auto;
+    > * {
+      margin-bottom: 60px;
     }
   }
 
-  .hero__bottom {
+  .slideshow {
     position: relative;
     overflow: hidden;
     .state {
@@ -52,7 +51,7 @@
     }
   }
 
-  .hero-title {
+  .title {
     @include expanding-hover($primary-color);
     text-decoration: none;
     color: white;
@@ -72,7 +71,7 @@
       color: white;
     }
   }
-  .text {
+  .description {
     color: white;
   }
   .contact-us-button {
