apply style guide to partials

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -1,40 +1,97 @@
 <div class="contact-info-body">
+
    <div class="contact-row">
+
     <div>
+
       <div class="icon-holder">
-        <img src="/images/phone-icon.png" class="icon-small"/>
+        <img
+          src="/images/phone-icon.png"
+          class="icon-small"
+        />
       </div>
+
       <div>
-        <span>{{site.data.contact.phone}}</span>
+        <span>
+          {{site.data.contact.phone}}
+        </span>
       </div>
+
     </div>
+
     <div>
+
       <div class="icon-holder">
-        <img src="/images/location-icon.png" class="icon-small address"/>
+        <img
+          src="/images/location-icon.png"
+          class="icon-small address"
+        />
       </div>
+
       <div>
-        <span class="underline address-line">{{site.data.contact.address1}}</span><br />
-        <span class="underline address-line">{{site.data.contact.address2}}</span><br />
-        <span class="underline address-line">{{site.data.contact.address3}}</span>
+
+        <span class="underline address-line">
+          {{site.data.contact.address1}}
+        </span>
+
+        <br />
+
+        <span class="underline address-line">
+          {{site.data.contact.address2}}
+        </span>
+
+        <br />
+
+        <span class="underline address-line">
+          {{site.data.contact.address3}}
+        </span>
+
       </div>
+
     </div>
+
   </div>
+
   <div class="contact-row">
+
     <div>
+
       <div class="icon-holder">
-        <img src="/images/email-icon.png" class="icon-small"/>
+        <img
+          src="/images/email-icon.png"
+          class="icon-small"
+        />
       </div>
+
       <div>
-        <span><a href="mailto:{{site.data.email}}">{{site.data.contact.email}}</a></span>
+        <span>
+          <a href="mailto:{{site.data.email}}">
+            {{site.data.contact.email}}
+          </a>
+        </span>
       </div>
+
     </div>
+
     <div>
+
       <div class="icon-holder">
-        <img src="/images/ig-icon.png" class="icon-small"/>
+        <img
+          src="/images/ig-icon.png"
+          class="icon-small"
+        />
       </div>
+
       <div>
-        <span><a href="https://www.instagram.com/{{site.data.instagram}}">{{site.data.contact.instagram}}</a></span>
+        <span>
+          <a href="https://www.instagram.com/{{site.data.instagram}}">
+            {{site.data.contact.instagram}}
+          </a>
+        </span>
       </div>
+
     </div>
+
   </div>
+
 </div>
