--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,27 +1,101 @@
 <div class="modal contact-us-modal">
   <div class="inner">
+
     <div class="modal__close"></div>
-    <form id="gform" class="form" method="POST">
-      <p class="contact-us">CONTACT US</p>
+
+    <form
+      id="gform"
+      class="form"
+      method="POST"
+    >
+
+      <p class="contact-us">
+        CONTACT US
+      </p>
+
       {% include contact-info.html %}
-      <label class="contact-labels" for="name">Name</label>
-      <input name="name" type="text" placeholder="Name">
-      <label class="contact-labels" for="email">Email</label>
-      <input name="email" type="text" placeholder="Email">
-      <div id="email-invalid" class="validation">Please use a valid email address</div>
-      <label class="contact-labels" for="phone">Phone</label>
-      <input name="phone" type="text" placeholder="Phone Number">
-      <button id="submit-contact-form">SUBMIT</button>
+
+      <label
+        for="name"
+        class="contact-labels"
+      >
+        Name
+      </label>
+
+      <input
+        name="name"
+        type="text"
+        placeholder="Name"
+      >
+
+      <label
+        for="email"
+        class="contact-labels"
+      >
+        Email
+      </label>
+
+      <input
+        name="email"
+        type="text"
+        placeholder="Email"
+      >
+
+      <div
+        id="email-invalid"
+        class="validation"
+      >
+        Please use a valid email address
+      </div>
+
+      <label
+        for="phone"
+        class="contact-labels"
+      >
+        Phone
+      </label>
+
+      <input
+        name="phone"
+        type="text"
+        placeholder="Phone Number"
+      >
+
+      <button
+        id="submit-contact-form"
+      >
+        SUBMIT
+      </button>
+
     </form>
+
     <div id="form-submit-loader">
-      <div class="loader">Loading...</div>
+      <div class="loader">
+        Loading...
+      </div>
     </div>
-    <div id="thankyou_message" class="contact-form-status">
+
+    <div
+      id="thankyou_message"
+      class="contact-form-status"
+    >
+
       <img src="/images/icons/okay.png" />
-      <p>Thanks! We'll be in touch</p>
+
+      <p>
+        Thanks! We'll be in touch
+      </p>
+
     </div>
-    <div id="error_message" class="contact-form-status">
-      <p>Sorry, an error occurred.</p>
+
+    <div
+      id="error_message"
+      class="contact-form-status"
+    >
+      <p>
+        Sorry, an error occurred.
+      </p>
     </div>
+
   </div>
 </div>
