--- a/_includes/services-modal.html
+++ b/_includes/services-modal.html
@@ -1,13 +1,22 @@
 <div class="inner">
 	<div class="services-modal-content">
+
 		<div class="service-detail-close"></div>
+
 		<div class="header">
-			<h1>{{ include.header-text }}</h1>
+			<h1>
+				{{ include.header-text }}
+			</h1>
 		</div>
+
 		<div class="content">
+
 			<div class="service-section">
-				<p>{{ include.body-text }}<p>
+				<p>
+					{{ include.body-text }}
+				<p>
 			</div>
+
 			<div class="service-section service-section--learn-more">
 				<a
 					href="{{ include.link }}"
@@ -16,9 +25,11 @@
 					LEARN MORE
 				</a>
 			</div>
+
 			{% include service-example.html
 				examples=include.examples
 			%}
 		</div>
+
 	</div>
 </div>
