- Move contact-us modal styles to their own sheet (and clean / DRY up) - Place some 'honey pot' SPAM prevention logic - Remove ie9 detection

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -15,9 +15,17 @@
 
       {% include contact-info.html %}
 
+      <!-- this input is for spam prevention -->
+      <input
+        name="albuquerque"
+        type="text"
+        placeholder="Took a wrong turn"
+        class="hidden"
+      >
+
       <label
         for="name"
-        class="contact-labels"
+        class="hidden"
       >
         Name
       </label>
@@ -30,7 +38,7 @@
 
       <label
         for="email"
-        class="contact-labels"
+        class="hidden"
       >
         Email
       </label>
@@ -50,7 +58,7 @@
 
       <label
         for="phone"
-        class="contact-labels"
+        class="hidden"
       >
         Phone
       </label>
