--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,7 @@
 @import "agent-card.scss";
 @import "agent-modal.scss";
 @import "footer.scss";
+@import "contact-us-modal.scss";
 
 .modal {
   @include modal;
